atest/testdata/cli/error/resource_with_error.robot
*** Settings ***
Test Setup    Not allowed in resource

*** Keywords ***
Keyword
    No Operation
